cluster/resources/dev/NetworkPolicy/DefaultNetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-policy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - ipBlock:
          cidr: 192.168.0.66/32
  egress:
    - to:
      - ipBlock:
          cidr: 172.16.0.0/16
