cluster/resources/dev/NetworkPolicy/NetworkPolicyBus.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: restrict-access-to-ui-tier-only
  namespace: dev
spec:
  podSelector:
    matchLabels:
      service: bus
  ingress:
  - from:
    - podSelector:
        matchLabels:
          service: ui
